--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -35,7 +35,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="45"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -110,7 +110,7 @@
                     <Button Name="BackButton" Click="BackButton_Click" Width="40"  Background="{StaticResource Button_Background}" BorderThickness="0" VerticalAlignment="Stretch">
                         <SymbolIcon Symbol="Back"></SymbolIcon>
                     </Button>
-                    <TextBox BorderThickness="0" Background="{StaticResource TITLE_BAR_WHITE}" FontSize="18" Text="Note name" Margin="5 0 0 0" VerticalAlignment="Center"></TextBox>
+                    <TextBox Name="noteNameTextBox" KeyDown="noteNameTextBox_KeyDown"  BorderThickness="0" Background="{StaticResource TITLE_BAR_WHITE}" FontSize="18" Text="" Margin="5 0 0 0" VerticalAlignment="Center"></TextBox>
                 </StackPanel>
             
                 <CommandBar Grid.Column="1" HorizontalAlignment="Left" Name="topCmdBar" Background="{StaticResource TITLE_BAR_WHITE}">
@@ -252,7 +252,7 @@
             </Grid>
         </Grid>
 
-        <SplitView  Name="MainSplitView" Grid.Row="1" DisplayMode="CompactInline" CompactPaneLength="40">
+        <SplitView  Name="MainSplitView" Grid.Row="1" DisplayMode="CompactInline" IsPaneOpen="True"  CompactPaneLength="40">
             <SplitView.Pane>
                 <!-- Added Phenotypes-->
                 <Grid Name="QuickViewGrid" BorderThickness="0 0 0 0" Background="WhiteSmoke">
@@ -264,13 +264,13 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="40"/>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="1"/>
+                        <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
                     <StackPanel Orientation="Vertical" VerticalAlignment="Top" Grid.Row="0">
                         <Button BorderThickness="0" Foreground="Gray" Background="WhiteSmoke" Width="40" Height="30" Name="QuickViewButton" Click="QuickViewButton_Click">
-                            <SymbolIcon Name="QuickViewButtonSymbol" Symbol="GlobalNavigationButton"></SymbolIcon>
+                            <SymbolIcon Name="QuickViewButtonSymbol" Symbol="Clear"></SymbolIcon>
                         </Button>
-                        <ToggleButton Style="{StaticResource MyToggleButtonStyle}"  Width="40" Height="80" Name="OverViewToggleButton" Click="OverViewToggleButton_Click">
+                        <ToggleButton IsChecked="True" Style="{StaticResource MyToggleButtonStyle}"  Width="40" Height="80" Name="OverViewToggleButton" Click="OverViewToggleButton_Click">
                             <Grid>
                                 <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xF0E3;"/>
                                 <TextBlock></TextBlock>
@@ -290,8 +290,8 @@
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Margin="2 0 0 0" Padding="0 3 0 3" FontSize="15" Foreground="{StaticResource WORD_DARK}">Collected phenotypes:</TextBlock>
-                        <ListView x:Name="savedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.savedPhenotypes, Mode=OneWay}">
+                        <TextBlock Grid.Row="0" Margin="2 0 0 0" Padding="0 3 0 3" FontSize="15" Foreground="{StaticResource WORD_DARK}">Saved phenotypes:</TextBlock>
+                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="savedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.savedPhenotypes, Mode=OneWay}">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Phenotype">
                                     <customcontrol:PhenotypeControl phenotypeName="{x:Bind name}" phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" sourceType="Saved"></customcontrol:PhenotypeControl>
@@ -316,7 +316,7 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="0"  Margin="2 0 0 0" Padding="0 3 0 3"  Foreground="{StaticResource WORD_DARK}">You may also want to investigate:</TextBlock>
-                        <ListView x:Name="suggestedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.suggestedPhenotypes, Mode=OneWay}">
+                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="suggestedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.suggestedPhenotypes, Mode=OneWay}">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Phenotype">
                                     <customcontrol:PhenotypeControl phenotypeName="{x:Bind name}" phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" sourceType="Suggested"></customcontrol:PhenotypeControl>
@@ -385,33 +385,38 @@
             </Grid.ColumnDefinitions>
               
             <Grid Name="OpenCandidatePanelButtonGrid" Grid.Column="0">
-                <ToggleButton HorizontalAlignment="Stretch" IsChecked="True" VerticalAlignment="Stretch" Style="{StaticResource MyToggleButtonStyle}" Name="OpenCandidatePanelButton" Click="OpenCandidate_Click" >
-                <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE82F;"/>
+                <ToggleButton HorizontalAlignment="Stretch"  IsChecked="False" VerticalAlignment="Stretch" Style="{StaticResource MyToggleButtonStyle}" Name="OpenCandidatePanelButton" Click="OpenCandidate_Click" >
+                    <FontIcon Name="OpenCandidatePanelButtonIcon" Foreground="Gray" FontFamily="Segoe MDL2 Assets" Glyph="&#xE82F;"/>
                 </ToggleButton>
             </Grid>
-            
-            <ListView Grid.Column="1" Padding="0 10 0 10" x:Name="candidatePhenoListView" ItemsSource="{x:Bind PhenoMana.phenotypesCandidates, Mode=OneWay}">
-                <ListView.ItemsPanel>
+            <StackPanel Padding="5 5 0 5" Orientation="Horizontal" Grid.Column="1" Name="CandidatePanelStackPanel" Visibility="Collapsed">
+                <TextBlock Name="CandidatePanelTextBlock" FontSize="16" Foreground="Gray" VerticalAlignment="Center">Are you looking for:</TextBlock>
+
+                <ListView Grid.Column="2" Padding="0 0 0 0" x:Name="candidatePhenoListView" ItemsSource="{x:Bind PhenoMana.phenotypesCandidates, Mode=OneWay}">
+                    <ListView.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Horizontal"  Padding="0"/>
                         </ItemsPanelTemplate>
                     </ListView.ItemsPanel>
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="phenotypeservice:Phenotype">
-                        <customcontrol:PhenotypeBriefControl phenotypeName="{x:Bind name}" phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" sourceType="Notes"></customcontrol:PhenotypeBriefControl>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-                <ListView.ItemContainerStyle>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="phenotypeservice:Phenotype">
+                            <customcontrol:PhenotypeBriefControl phenotypeName="{x:Bind name}" phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" sourceType="{x:Bind sourceType}"></customcontrol:PhenotypeBriefControl>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                    <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
-                            <Setter Property="HorizontalContentAlignment" Value="Center" />
-                            <Setter Property="VerticalContentAlignment" Value="Center" />
-                            <Setter Property="Margin" Value="10,0,10,0" />
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                            <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                            <Setter Property="Margin" Value="5,0,5,0" />
                             <Setter Property="Padding" Value="0,0,0,0" />
-                            <Setter Property="MinHeight" Value="10" />
+                            <Setter Property="MinHeight" Value="20" />
                             <Setter Property="MinWidth" Value="20" />
                         </Style>
                     </ListView.ItemContainerStyle>
                 </ListView>
+
+            </StackPanel>
+            
             </Grid>
 
  
