--- a/PhenoPad/OverviewPage.xaml
+++ b/PhenoPad/OverviewPage.xaml
@@ -23,13 +23,13 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <!-- Added Phenotypes-->
-        <Grid Grid.Row="0" Grid.Column="0" BorderBrush="{ThemeResource AppBarBackground}" BorderThickness="10 10 0 0">
+        <Grid Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" Margin="10 10 10 10" BorderThickness="1 1 1 1" Padding="5">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" FontSize="16" Foreground="DodgerBlue" Margin="10 0 0 0">Collected Phenotypes</TextBlock>
+                <TextBlock Grid.Row="0" FontSize="18" Foreground="Black" Margin="10 0 0 0">Saved Phenotypes</TextBlock>
                 <ListView x:Name="savedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.savedPhenotypes, Mode=OneWay}">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="phenotypeservice:Phenotype">
@@ -40,7 +40,7 @@
                         <Style TargetType="ListViewItem">
                             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                             <Setter Property="Margin" Value="0,0,0,0" />
-                            <Setter Property="Padding" Value="5,0,0,0" />
+                            <Setter Property="Padding" Value="5,0,20,0" />
                             <Setter Property="MinHeight" Value="20" />
                         </Style>
                     </ListView.ItemContainerStyle>
@@ -48,7 +48,7 @@
             </Grid>
         </Grid>
         <!-- Phenotypes from notes and speech-->
-        <Grid Grid.Row="0" Grid.Column="1" BorderBrush="{ThemeResource AppBarBackground}" BorderThickness="10 10 10 0">
+        <Grid Grid.Row="0"  Grid.Column="1" BorderBrush="LightGray" Margin="10 10 10 10" BorderThickness="1 1 1 1" Padding="5">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -59,7 +59,7 @@
                         <RowDefinition Height="30"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0"  FontSize="16" Foreground="DodgerBlue" Margin="10 0 0 0">Phenotypes From Notes</TextBlock>
+                    <TextBlock Grid.Row="0"  FontSize="18" Foreground="Black" Margin="10 0 0 0">Phenotypes From Notes</TextBlock>
                     <ListView x:Name="phenoOfNotesListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.phenotypesInNote, Mode=OneWay}">
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="phenotypeservice:Phenotype">
@@ -70,18 +70,18 @@
                             <Style TargetType="ListViewItem">
                                 <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                                 <Setter Property="Margin" Value="0,0,0,0" />
-                                <Setter Property="Padding" Value="5,0,0,0" />
+                                <Setter Property="Padding" Value="5,0,20,0" />
                                 <Setter Property="MinHeight" Value="20" />
                             </Style>
                         </ListView.ItemContainerStyle>
                     </ListView>
                 </Grid>
-                <Grid Grid.Row="1" BorderBrush="{ThemeResource AppBarBackground}" BorderThickness="0 10 0 0">
+                <Grid Grid.Row="1" BorderBrush="White" BorderThickness="0 10 0 0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0"  FontSize="16" Foreground="DodgerBlue" Margin="10 0 0 0">Phenotypes From Speech</TextBlock>
+                    <TextBlock Grid.Row="0"  FontSize="18" Foreground="Black" Margin="10 0 0 0">Phenotypes From Speech</TextBlock>
                     <ListView x:Name="phenoOfSpeechListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.phenotypesInSpeech, Mode=OneWay}">
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="phenotypeservice:Phenotype">
@@ -92,7 +92,7 @@
                             <Style TargetType="ListViewItem">
                                 <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                                 <Setter Property="Margin" Value="0,0,0,0" />
-                                <Setter Property="Padding" Value="5,0,0,0" />
+                                <Setter Property="Padding" Value="5,0,20,0" />
                                 <Setter Property="MinHeight" Value="20" />
                             </Style>
                         </ListView.ItemContainerStyle>
@@ -101,13 +101,13 @@
             </Grid>
         </Grid>
         <!-- Suggested phenotyeps-->
-        <Grid Grid.Row="1" Grid.Column="0" BorderBrush="{ThemeResource AppBarBackground}" BorderThickness="10 10 0 10">
+        <Grid Grid.Row="1" Grid.Column="0" BorderBrush="LightGray" Margin="10 10 10 10" BorderThickness="1 1 1 1" Padding="5 5 5 5">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0"  FontSize="16" Foreground="DodgerBlue" Margin="10 0 0 0">Suggested Phenotypes</TextBlock>
+                <TextBlock Grid.Row="0"  FontSize="18" Foreground="Black" Margin="10 0 0 0">Suggested Phenotypes</TextBlock>
                 <ListView x:Name="suggestedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.suggestedPhenotypes, Mode=OneWay}">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="phenotypeservice:Phenotype">
@@ -118,7 +118,7 @@
                         <Style TargetType="ListViewItem">
                             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                             <Setter Property="Margin" Value="0,0,0,0" />
-                            <Setter Property="Padding" Value="5,0,0,0" />
+                            <Setter Property="Padding" Value="5,0,20,0" />
                             <Setter Property="MinHeight" Value="20" />
                         </Style>
                     </ListView.ItemContainerStyle>
@@ -126,13 +126,13 @@
             </Grid>
         </Grid>
         <!-- Diseases -->
-        <RelativePanel Grid.Row="1" Grid.Column="1" BorderBrush="{ThemeResource AppBarBackground}" BorderThickness="10">
+        <RelativePanel Grid.Row="1" Grid.Column="1" BorderBrush="LightGray" Margin="10 10 10 10" BorderThickness="1 1 1 1" Padding="5">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0"  FontSize="16" Foreground="DodgerBlue" Margin="10 0 0 0">Differential diagnosis</TextBlock>
+                <TextBlock Grid.Row="0"  FontSize="18" Foreground="Black" Margin="10 0 0 0">Differential diagnosis</TextBlock>
                 <ListView x:Name="diseaseListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.predictedDiseases}">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="phenotypeservice:Disease">
@@ -143,7 +143,7 @@
                         <Style TargetType="ListViewItem">
                             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                             <Setter Property="Margin" Value="0,0,0,0" />
-                            <Setter Property="Padding" Value="5,0,0,0" />
+                            <Setter Property="Padding" Value="5,0,20,0" />
                             <Setter Property="MinHeight" Value="20" />
                         </Style>
                     </ListView.ItemContainerStyle>
