--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -285,13 +285,15 @@
                         
                     </StackPanel>
                     
-                    <Grid Name="QuickView1" Background="White" BorderBrush="#EEEEEE" BorderThickness="0" Grid.Row="0" Grid.Column="1">
+                    <Grid Name="QuickView1" Background="White"  BorderBrush="#EEEEEE" BorderThickness="0" Grid.Row="0" Grid.Column="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Margin="2 0 0 0" Padding="0 3 0 3" FontSize="15" Foreground="{StaticResource WORD_DARK}">Saved phenotypes:</TextBlock>
-                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="savedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.savedPhenotypes, Mode=OneWay}">
+                        <Border Background="{StaticResource Title_Background}">
+                            <TextBlock  Grid.Row="0"  Margin="3 0 0 0" VerticalAlignment="Center"  Foreground="Black">Saved phenotypes:</TextBlock>
+                        </Border>
+                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="savedPhenoListView" Grid.Row="1" Padding="3" ItemsSource="{x:Bind PhenoMana.savedPhenotypes, Mode=OneWay}">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Phenotype">
                                     <customcontrol:PhenotypeControl phenotypeName="{x:Bind name}" phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" sourceType="Saved"></customcontrol:PhenotypeControl>
@@ -315,8 +317,12 @@
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0"  Margin="2 0 0 0" Padding="0 3 0 3"  Foreground="{StaticResource WORD_DARK}">You may also want to investigate:</TextBlock>
-                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="suggestedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.suggestedPhenotypes, Mode=OneWay}">
+                        <Border Background="{StaticResource Title_Background}">
+                            <TextBlock  Grid.Row="0"  Margin="3 0 0 0" VerticalAlignment="Center"  Foreground="Black">You may also want to investigate:</TextBlock>
+                        </Border>
+                        
+                        
+                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="suggestedPhenoListView" Grid.Row="1" Padding="3" ItemsSource="{x:Bind PhenoMana.suggestedPhenotypes, Mode=OneWay}">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Phenotype">
                                     <customcontrol:PhenotypeControl phenotypeName="{x:Bind name}" phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" sourceType="Suggested"></customcontrol:PhenotypeControl>
@@ -339,8 +345,11 @@
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0"  Margin="2 0 0 0" Padding="0 3 0 3"  Foreground="{StaticResource WORD_DARK}">Differential diagnosis:</TextBlock>
-                        <ListView x:Name="diseaseListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.predictedDiseases}">
+                        <Border Background="{StaticResource Title_Background}">
+                            <TextBlock  Grid.Row="0"  Margin="3 0 0 0" VerticalAlignment="Center"  Foreground="Black">Differential diagnosis:</TextBlock>
+                        </Border>
+                        
+                        <ListView x:Name="diseaseListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.predictedDiseases}" Padding="3">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Disease">
                                     <TextBlock Text="{x:Bind name}" FontSize="13"></TextBlock>
