--- a/PhenoPad/PageOverview.xaml
+++ b/PhenoPad/PageOverview.xaml
@@ -4,39 +4,58 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PhenoPad"
     xmlns:fileservice="using:PhenoPad.FileService"
+    xmlns:customcontrol="using:PhenoPad.CustomControl"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     NavigationCacheMode="Disabled">
     <Page.Resources>
-       
-       
-    </Page.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Default">
+                    
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <DataTemplate x:Key="ColorTemplate" x:DataType="SolidColorBrush">
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle Height="20" Width="20" Fill="{x:Bind}"/>
+                    <TextBlock Text="{x:Bind Color}" Margin="5,0,0,0"/>
+                </StackPanel>
+            </DataTemplate>
+        </ResourceDictionary>
+    </Page.Resources>
+    <Grid  Background="{ThemeResource CustomAcrylicBackgroundBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="400"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-
+       
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"></RowDefinition>
+                
                 <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="100"></RowDefinition>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" Padding="5">
-                <Button Style="{StaticResource MyButtonStyle}" Click="CreateButton_Click" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
+            <Border Grid.Row="2" Padding="5">
+                <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" Click="CreateButton_Click" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
                     <StackPanel Orientation="Horizontal" >
                         <FontIcon FontSize="27" FontWeight="ExtraBold" FontFamily="Segoe MDL2 Assets" Glyph="&#xE710;"/>
-                        <TextBlock Margin="15 0 0 0" FontSize="30" >Create new note</TextBlock>
+                        <TextBlock Margin="15 0 0 0" FontSize="27" >Create new note</TextBlock>
                     </StackPanel>
                 </Button>
             </Border>
-            <ListView  x:Name="notebookList" ItemClick="notebookList_ItemClick" IsItemClickEnabled="True" Grid.Row="1">
+            <StackPanel Grid.Row="0" Margin="5" >
+                <TextBlock  Name="AllNotesTextBlock" Foreground="Black" Margin="5 10 0 5"  FontSize="30">All notes</TextBlock>
+                <AutoSuggestBox QueryIcon="Find" HorizontalAlignment="Stretch" Margin="5 0 5 0" RelativePanel.AlignVerticalCenterWithPanel="True" Name="autoSuggestBox" PlaceholderText="Search" TextChanged="autosuggesttextchanged" QuerySubmitted="autosuggestquerysubmitted" ></AutoSuggestBox>
+            </StackPanel>
+            <ListView  Margin="5"  x:Name="notebookList" ItemClick="notebookList_ItemClick" IsItemClickEnabled="True" Grid.Row="1">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="fileservice:Notebook">
-                        <Grid>
+                        <Grid >
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="80"/>
                                 <ColumnDefinition Width="*"/>
@@ -54,7 +73,7 @@
                             </RelativePanel>
                             
 
-                            <Button x:Name="OpenButton" Tag="{x:Bind id}"  Click="OpenButton_Click" Background="Transparent" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Button Style="{StaticResource MyButtonStyle}" x:Name="OpenButton" Tag="{x:Bind id}"  Click="OpenButton_Click" Background="Transparent" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                                 <TextBlock Foreground="{StaticResource WORD_DARK}">Open</TextBlock>
                             </Button>
                         </Grid>
@@ -123,39 +142,106 @@
         </StackPanel>
         -->
 
-        <GridView Name="NoteGridView" Grid.Column="1" ItemClick="GridView_ItemClick" Padding="10">
-            <GridView.ItemTemplate>
-                <DataTemplate x:DataType="fileservice:NotePage">
-                    <Grid Padding="5" BorderThickness="1" BorderBrush="Black">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="38"></RowDefinition>
-                            <RowDefinition Height="28"></RowDefinition>
-                            <RowDefinition Height="*"></RowDefinition>
-                        </Grid.RowDefinitions>
-                        <Border Background="White" Grid.Row="0" Height="300" Width="240">
-                            <TextBlock Text="{x:Bind name}" 
+        <Grid Grid.Column="1" Background="White">
+            <ScrollViewer>
+            <StackPanel>
+                <Border Background="{StaticResource Title_Background}" Height="40">
+                    <TextBlock VerticalAlignment="Center" Grid.Row="0" FontSize="20" Foreground="Black" Margin="10 0 0 0">Note pages</TextBlock>
+                </Border>
+                <GridView Name="NoteGridView" ItemClick="GridView_ItemClick" Padding="10 10 10 10" Height="345"
+                           ScrollViewer.HorizontalScrollBarVisibility="Auto"
+    ScrollViewer.HorizontalScrollMode="Enabled"
+    ScrollViewer.VerticalScrollMode="Disabled">
+                    
+                    <GridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsWrapGrid Orientation="Vertical" />
+                        </ItemsPanelTemplate>
+                    </GridView.ItemsPanel>
+
+                    <GridView.ItemTemplate>
+                        <DataTemplate x:DataType="fileservice:NotePage">
+                            <Grid Padding="5" BorderThickness="1" BorderBrush="Black">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="38"></RowDefinition>
+                                    <RowDefinition Height="28"></RowDefinition>
+                                    <RowDefinition Height="*"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Border Background="White" Grid.Row="0" Height="300" Width="240">
+                                    <TextBlock Text="{x:Bind name}" 
                                FontSize="28" Foreground="{StaticResource WORD_DARK}"/>
-                        </Border>
-                        <Border Background="White" Grid.Row="1" Height="300" Width="240">
-                            <TextBlock Text="{x:Bind date}" 
+                                </Border>
+                                <Border Background="White" Grid.Row="1" Height="300" Width="240">
+                                    <TextBlock Text="{x:Bind date}" 
                                FontSize="18" Foreground="Gray"/>
-                        </Border>
-                        <Border Height="240" Width="200" Grid.Row="2">
-                            <BitmapIcon UriSource="{x:Bind strokeUri}"/>
-                           <!-- 
+                                </Border>
+                                <Border Height="240" Width="200" Grid.Row="2">
+                                    <BitmapIcon UriSource="{x:Bind strokeUri}"/>
+                                    <!-- 
                             <Image Source="{x:Bind strokeUri}"/>
                             -->
-                        </Border>
-                    </Grid>
-                </DataTemplate>
-            </GridView.ItemTemplate>
-            <GridView.Items>
-                <GridViewItem BorderThickness="1" BorderBrush="Black">
-                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE710;" Foreground="{StaticResource WORD_DARK}" FontSize="72" FontWeight="ExtraBold"/>
-                </GridViewItem>
-            </GridView.Items>
-        </GridView>
+                                </Border>
+                            </Grid>
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                    <GridView.Items>
+                        <GridViewItem BorderThickness="1" BorderBrush="Black">
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE710;" Foreground="{StaticResource WORD_DARK}" FontSize="72" FontWeight="ExtraBold"/>
+                        </GridViewItem>
+                    </GridView.Items>
+                </GridView>
 
+                <Border Background="{StaticResource Title_Background}" Height="40">
+                    <TextBlock VerticalAlignment="Center" Grid.Row="0" FontSize="20" Foreground="Black" Margin="10 0 0 0">Photos and annotations</TextBlock>
+                </Border>
+
+                <GridView Name="ImageAnnotationGridView" ItemClick="GridView_ItemClick" Padding="10 10 10 10" Height="400"
+                           ScrollViewer.HorizontalScrollBarVisibility="Auto"
+    ScrollViewer.HorizontalScrollMode="Enabled"
+    ScrollViewer.VerticalScrollMode="Disabled">
+
+                    <GridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsWrapGrid Orientation="Vertical" />
+                        </ItemsPanelTemplate>
+                    </GridView.ItemsPanel>
+
+                    <GridView.ItemTemplate>
+                        <DataTemplate x:DataType="fileservice:ImageAndAnnotation">
+                            <customcontrol:AddInControl name="{x:Bind name}" notebookId="{x:Bind notebookId}" viewOnly="True" pageId="{x:Bind pageId}"></customcontrol:AddInControl>
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                    <GridView.Items>
+                        <GridViewItem BorderThickness="1" BorderBrush="Black">
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE710;" Foreground="{StaticResource WORD_DARK}" FontSize="72" FontWeight="ExtraBold"/>
+                        </GridViewItem>
+                    </GridView.Items>
+                </GridView>
+
+                <Border Name="ImageAnnotationPlaceHoder" Visibility="Visible" Height="60" Padding="10">
+                    <TextBlock VerticalAlignment="Center" Grid.Row="0" FontSize="20" Foreground="Black" Margin="10 0 0 0">No images or drawings found.</TextBlock>
+                </Border>
+
+                <Border Background="{StaticResource Title_Background}" Height="40">
+                    <TextBlock VerticalAlignment="Center" Grid.Row="0" FontSize="20" Foreground="Black" Margin="10 0 0 0">Audio</TextBlock>
+                </Border>
+
+                <Border Name="AudioPlaceHoder" Visibility="Visible" Height="60" Padding="10">
+                    <TextBlock VerticalAlignment="Center" Grid.Row="0" FontSize="20" Foreground="Black" Margin="10 0 0 0">No audio files found.</TextBlock>
+                </Border>
+                
+                <Border Background="{StaticResource Title_Background}" Height="40" >
+                    <TextBlock VerticalAlignment="Center" Grid.Row="0" FontSize="20" Foreground="Black" Margin="10 0 0 0">Video</TextBlock>
+                </Border>
+                <Border Name="VideoPlaceHoder" Visibility="Visible" Height="60" Padding="10">
+                    <TextBlock VerticalAlignment="Center" Grid.Row="0" FontSize="20" Foreground="Black" Margin="10 0 0 0">No video files found.</TextBlock>
+                </Border>
+
+
+            </StackPanel>
+            </ScrollViewer>
+        </Grid>
+        
         <Grid Name="MessageGrid" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White">
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Foreground="LightGray">Select a note to preview</TextBlock>
         </Grid>
